# bunny-dns

./: .env.example  .gitignore  README.md  check_propagation.py  config.example.json  dns_manager.py  edge_rules_manager.py  main.py  pullzone_manager.py  pyproject.toml  requirements.txt  sync.py
bunny_dns/: __init__.py  bunny_client.py  check_propagation.py  dns_manager.py  edge_rules_manager.py  main.py  pullzone_manager.py  sync.py
tests/: conftest.py  test_bunny_client.py  test_dns_manager.py  test_edge_rules_manager.py  test_pullzone_manager.py  test_sync.py
